The navigation icons were not showing up. Fixed it

--- a/apps/Announcements/index.scss
+++ b/apps/Announcements/index.scss
@@ -224,4 +224,7 @@
       }
     }
   }
+  .svg-inline--fa{
+    color: gray;
+  }
 }
